--- a/client/src/screens/MovementDetails/MovementDetails.module.css
+++ b/client/src/screens/MovementDetails/MovementDetails.module.css
@@ -1,7 +1,6 @@
-
 .whole {
-background-color: black; 
-height: 90vh;
+  background-color: black;
+  height: 100vh;
 }
 
 .name {
@@ -9,6 +8,7 @@ height: 90vh;
   font-family: 'Raleway';
   font-size: 5vw;
   margin: 10px 0px 0px 0px;
+  border-top: 2px solid purple;
 }
 
 .image {
@@ -22,38 +22,39 @@ height: 90vh;
   font-family: 'Raleway';
 }
 
-.guest  {
+.guest {
   color: white;
   font-family: 'Raleway';
 }
 
 @media only screen and (min-width:760px) {
-    .name {
-      font-size: 5vw;
-      margin: 10px 0px 0px 0px;
-    }
+  .name {
+    font-size: 5vw;
+    margin: 10px 0px 0px 0px;
+  }
 
-    .cues {
-      font-size: 3vw;
-    }
+  .cues {
+    font-size: 3vw;
+  }
 }
 
 @media only screen and (min-width:1250px) {
   .whole {
     height: 130vh;
-    }
-    .name {
-      color: white;
-      font-size: 3.25vw;
-      margin: 30px 0px 0px 0px;
-    }
-    
-    .image {
-      width: 20%;
-      border-radius: 10px;
-    }
-    
-    .cues {
-      font-size: 1.5vw;
-    }
+  }
+
+  .name {
+    color: white;
+    font-size: 3.25vw;
+    margin: 30px 0px 0px 0px;
+  }
+
+  .image {
+    width: 20%;
+    border-radius: 10px;
+  }
+
+  .cues {
+    font-size: 1.5vw;
+  }
 }
